testsuite/tests/overloadedrecflds/should_fail/overloadedlabelsfail03.hs
{-# LANGUAGE OverloadedLabels, RebindableSyntax #-}

main = #foo
  where
    fromLabel = ()
