testsuite/tests/overloadedrecflds/should_fail/overloadedlabelsfail03.stderr

overloadedlabelsfail03.hs:3:8: error:
    • Bad overloaded label type ()
    • In the expression: #foo
      In an equation for ‘main’:
          main
            = #foo
            where
                fromLabel = ()
